load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]) + [
        "//go/config:all_files",
        "//go/platform:all_files",
        "//go/toolchain:all_files",
        "//go/tools:all_files",
        "//go/private:all_files",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_rules",
    srcs = glob(["*.bzl"]) + [
        "//go/platform:all_rules",
        "//go/private:all_rules",
        "//go/toolchain:all_rules",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "go_lib",
    srcs = [":all_rules"],
    visibility = ["//visibility:public"],
    deps = ["//proto:proto_lib"],
)

toolchain_type(
    name = "toolchain",
    visibility = ["//visibility:public"],
)
