load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]) + [
        "//go/config:all_files",
        "//go/platform:all_files",
        "//go/toolchain:all_files",
        "//go/tools:all_files",
        "//go/private:all_files",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_rules",
    srcs = glob(["*.bzl"]) + [
        "//go/platform:all_rules",
        "//go/private:all_rules",
        "//go/toolchain:all_rules",
    ],
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@io_bazel_rules_go//extras:embed_data",
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:go_toolchain",
        "@io_bazel_rules_go//go/private:providers",
        "@io_bazel_rules_go//go/private/rules:library",
        "@io_bazel_rules_go//go/private/rules:nogo",
        "@io_bazel_rules_go//go/private/rules:sdk",
        "@io_bazel_rules_go//go/private/rules:source",
        "@io_bazel_rules_go//go/private/rules:wrappers",
        "@io_bazel_rules_go//go/private/tools:path",
    ],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@io_bazel_rules_go//go/private:repositories",
        "@io_bazel_rules_go//go/private:sdk",
    ],
)
