load("//proto:toolchain.bzl", "proto_toolchain", "go_proto_toolchain")

proto_toolchain(
    name = "proto_impl",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "proto",
    exec_compatible_with = [],
    target_compatible_with = [],
    toolchain = "proto_impl",
    toolchain_type = "@io_bazel_rules_go//proto:proto",
)

go_proto_toolchain(
    name = "go_proto_impl",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

toolchain(
    name = "go_proto",
    exec_compatible_with = [],
    target_compatible_with = [],
    toolchain = "go_proto_impl",
    toolchain_type = "@io_bazel_rules_go//proto:go_proto",
)

go_proto_toolchain(
    name = "go_grpc_impl",
    options = ["plugins=grpc"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

toolchain(
    name = "go_grpc",
    exec_compatible_with = [],
    target_compatible_with = [],
    toolchain = "go_grpc_impl",
    toolchain_type = "@io_bazel_rules_go//proto:go_grpc",
)
