
load("//go:def.bzl", "go_binary", "go_path")
load("//go:swagger.bzl", "swagger_spec")

go_binary(
    name = "main",
    srcs = [
         "main/main.go",
    ],
)

go_path(
    name = "boring_srcs",
    deps = [
        ":main",
    ],
)

swagger_spec(
    name = "srcs_spec",
    mainpath = "tests/swagger/main",
    paths = [
        ":boring_srcs",
    ],
)

sh_test(
    name = "spec_test",
    srcs = [
        "test.sh",
    ],
    data = [
        ":srcs_spec",
    ],
)