load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "archive",
    srcs = ["archive.bzl"],
    deps = [
        "@io_bazel_rules_go//go/private:common",
        "@io_bazel_rules_go//go/private:mode",
        "@io_bazel_rules_go//go/private:providers",
        "@io_bazel_rules_go//go/private/actions:compilepkg",
        "@io_bazel_rules_go//go/private/rules:cgo",
    ],
)

bzl_library(
    name = "asm",
    srcs = ["asm.bzl"],
    deps = ["@io_bazel_rules_go//go/private:mode"],
)

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    deps = [
        "@io_bazel_rules_go//go/private:common",
        "@io_bazel_rules_go//go/private:mode",
    ],
)

bzl_library(
    name = "compile",
    srcs = ["compile.bzl"],
    deps = ["@io_bazel_rules_go//go/private:mode"],
)

bzl_library(
    name = "compilepkg",
    srcs = ["compilepkg.bzl"],
    deps = [
        "@bazel_skylib//lib:shell",
        "@io_bazel_rules_go//go/private:mode",
    ],
)

bzl_library(
    name = "cover",
    srcs = ["cover.bzl"],
    deps = [
        "@bazel_skylib//lib:structs",
        "@io_bazel_rules_go//go/private:providers",
    ],
)

bzl_library(
    name = "link",
    srcs = ["link.bzl"],
    deps = [
        "@io_bazel_rules_go//go/private:common",
        "@io_bazel_rules_go//go/private:mode",
    ],
)

bzl_library(
    name = "pack",
    srcs = ["pack.bzl"],
)

bzl_library(
    name = "stdlib",
    srcs = ["stdlib.bzl"],
    deps = [
        "@io_bazel_rules_go//go/private:mode",
        "@io_bazel_rules_go//go/private:providers",
    ],
)
