load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    deps = [
        ":common",
        ":context",
        ":mode",
        ":providers",
        ":rules/transition",
    ],
)

bzl_library(
    name = "cgo",
    srcs = ["cgo.bzl"],
    deps = [
        "@io_bazel_rules_go//go/private:common",
        "@io_bazel_rules_go//go/private:mode",
        "@rules_cc//cc:defs",
    ],
)

bzl_library(
    name = "info",
    srcs = ["info.bzl"],
    deps = ["//go/private:context"],
)

bzl_library(
    name = "library",
    srcs = ["library.bzl"],
    deps = [
        "@io_bazel_rules_go//go/private:common",
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:providers",
    ],
)

bzl_library(
    name = "nogo",
    srcs = ["nogo.bzl"],
    deps = [
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:providers",
        "@io_bazel_rules_go//go/private/rules:transition",
    ],
)

bzl_library(
    name = "sdk",
    srcs = ["sdk.bzl"],
    deps = ["@io_bazel_rules_go//go/private:providers"],
)

bzl_library(
    name = "source",
    srcs = ["source.bzl"],
    deps = [
        "@io_bazel_rules_go//go/private:context",
        "@io_bazel_rules_go//go/private:providers",
    ],
)

bzl_library(
    name = "stdlib",
    srcs = ["stdlib.bzl"],
    deps = [
        ":context",
        ":providers",
    ],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    deps = [
        ":binary",
        ":common",
        ":context",
        ":mode",
        ":providers",
        ":transition",
        "@bazel_skylib//lib:structs",
    ],
)

bzl_library(
    name = "transition",
    srcs = ["transition.bzl"],
    deps = [
        ":mode",
        ":platforms",
        ":providers",
        "@io_bazel_rules_go_name_hack//:def",
    ],
)

bzl_library(
    name = "wrappers",
    srcs = ["wrappers.bzl"],
    deps = [
        ":binary",
        ":cgo",
        ":library",
        ":test",
        ":transition",
    ],
)
