load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "all_rules",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "path",
    srcs = ["path.bzl"],
    visibility = [
        "//docs:__subpackages__",
        "//go:__subpackages__",
    ],
    deps = [
        "//go/private:common",
        "//go/private:providers",
    ],
)

bzl_library(
    name = "copy_cmd",
    srcs = ["copy_cmd.bzl"],
    visibility = ["//go:__subpackages__"],
)
