load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bazel_json_builder.go",
        "bazel.go",
        "driver_request.go",
        "flatpackage.go",
        "json_packages_driver.go",
        "packageregistry.go",
        "main.go",
    ],
    importpath = "github.com/bazelbuild/rules_go/go/tools/gopackagesdriver",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_tools//go/packages:go_default_library"],
)

go_binary(
    name = "gopackagesdriver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
