load("@io_bazel_rules_go//go/private:rules/library.bzl", "go_tool_library")

go_tool_library(
    name = "test_init",
    srcs = ["test_init.go"],
    importpath = "github.com/bazelbuild/rules_go/go/tools/test_init",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

# srcs are compiled into the test package with the generated testmain.
filegroup(
    name = "srcs",
    srcs = [
        "test_init.go",
    ],
    visibility = ["//visibility:public"],
)
