load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
)

go_library(
    name = "executable_runfiles_lib",
    srcs = ["executable_runfiles_plugin.go"],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_compiler/executable_runfiles",
    deps = [
        "//go/runfiles",
        "@org_golang_google_protobuf//compiler/protogen",
    ],
)

go_binary(
    name = "protoc-gen-executable_runfiles",
    data = ["executable_runfiles.conf"],
    embed = [":executable_runfiles_lib"],
)

go_proto_compiler(
    name = "executable_runfiles",
    plugin = ":protoc-gen-executable_runfiles",
    suffix = ".executable_runfiles.pb.go",
)

go_proto_library(
    name = "foo_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_proto",
        ":executable_runfiles",
    ],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_compiler/foo",
    proto = ":foo_proto",
)

go_test(
    name = "executable_runfiles_test",
    srcs = ["executable_runfiles_test.go"],
    deps = [
        ":foo_go_proto",
    ],
)

go_library(
    name = "data_lib",
    srcs = ["data_plugin.go"],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_compiler/data",
    deps = [
        "//go/runfiles",
        "@org_golang_google_protobuf//compiler/protogen",
    ],
)

go_binary(
    name = "protoc-gen-data",
    data = ["data.conf"],
    embed = [":data_lib"],
)

go_proto_compiler(
    name = "data",
    data = ["data.conf"],
    options = ["config=$(rootpath :data.conf)"],
    plugin = ":protoc-gen-data",
    suffix = ".data.pb.go",
)

go_proto_library(
    name = "foo_go_proto_with_data",
    compilers = [
        "@io_bazel_rules_go//proto:go_proto",
        ":data",
    ],
    importpath = "github.com/bazelbuild/rules_go/tests/core/go_proto_compiler/foo",
    proto = ":foo_proto",
)

go_test(
    name = "data_test",
    srcs = ["data_test.go"],
    deps = [
        ":foo_go_proto_with_data",
    ],
)
