load("@io_bazel_rules_go//go:def.bzl", "go_test")
load(":stdlib_files.bzl", "stdlib_files")

go_test(
    name = "buildid_test",
    srcs = ["buildid_test.go"],
    data = [":stdlib_files"],
    deps = ["//go/runfiles"],
)

go_test(
    name = "tzdata_test",
    srcs = ["tzdata_test.go"],
    race = "on",
    gotags = ["timetzdata"],
)

stdlib_files(name = "stdlib_files")
