load("@io_bazel_rules_go//go:def.bzl", "go_gendefs", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["gendefs_multi_dir_test.go"],
    size = "small",
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [":multi_dir"],
    importpath = "github.com/bazelbuild/rules_go/tests/gendefs_multi_dir",
    visibility = ["//visibility:public"],
)


go_gendefs(
    name = "multi_dir",
    srcs = [
        "foo/foo.h",
        "foo/foo.go",
        "bar/bar.h",
        "bar/bar.go",
    ],
)
