load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "all_rules",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//go:__subpackages__"],
)

bzl_library(
    name = "dicts",
    srcs = ["dicts.bzl"],
    visibility = ["//go:__subpackages__"],
)
