load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "directory.go",
        "manifest.go",
        "resolver.go",
    ],
    importpath = "github.com/bazelbuild/rules_go/go/tools/bazel/runfiles",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["resolver_test.go"],
    embed = [":go_default_library"],
)
