load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bazelquerydriver",
    srcs = [
        "driver.go",
        "sdk.go",
    ],
    importpath = "github.com/bazelbuild/rules_go/go/tools/gopackagesdriver/bazelquerydriver",
    visibility = ["//go/tools/gopackagesdriver:__subpackages__"],
    deps = [
        "//go/tools/gopackagesdriver/bazelquerydriver/pkgconv",
        "//go/tools/gopackagesdriver/protocol",
        "//go/tools/gopackagesdriver/bazel/proto/blaze_query",
        "//go/tools/gopackagesdriver/bazel",
        "@org_golang_x_tools//go/packages:go_default_library",
    ],
)
